--- a/index.html
+++ b/index.html
@@ -1,45 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="/styles.css" />
+    <title>Frontend Mentor | Four card feature section</title>
+  </head>
+  <body>
+    <header>
+      <h1>
+        Reliable, efficient delivery
+        <span class="bold">Powered by Technology</span>
+      </h1>
+      <p class="para">
+        Our Artificial Intelligence powered tools use millions of project data
+        points to ensure that your project is successful
+      </p>
+    </header>
+    <div class="container">
+      <div class="box box--pushY box--cyan">
+        <h2 class="bold">Supervisor</h2>
+        <p class="para">Monitors activity to identify project roadblocks</p>
+        <img src="./images/icon-supervisor.svg" alt="Supervisor" />
+      </div>
+      <div class="box box--red">
+        <h2 class="bold">Team Builder</h2>
+        <p class="para">
+          Scans our talent network to create the optimal team for your project
+        </p>
+        <img src="./images/icon-team-builder.svg" alt="Team Builder" />
+      </div>
+      <div class="box box--pushY box--blue">
+        <h2 class="bold">Calculator</h2>
+        <p class="para">
+          Uses data from past projects to provide better delivery estimates
+        </p>
+        <img src="./images/icon-calculator.svg" alt="Calculator" />
+      </div>
+      <div class="box box--pushX box--orange">
+        <h2 class="bold">Karma</h2>
+        <p class="para">Regularly evaluates our talent to ensure quality</p>
+        <img src="./images/icon-karma.svg" alt="Karma" />
+      </div>
+    </div>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Four card feature section</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
-
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
-
-  Supervisor
-  Monitors activity to identify project roadblocks
-
-  Team Builder
-  Scans our talent network to create the optimal team for your project
-
-  Karma
-  Regularly evaluates our talent to ensure quality
-
-  Calculator
-  Uses data from past projects to provide better delivery estimates
-
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+    <footer>
+      <p class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. <span> Coded by <a href="#">Arpan Chattopadhyay</a>.</span>
+      </p>
+    </footer>
+  </body>
 </html>
